# pstanczyk@ilm.com

SET (ILMBASE_LIB_TARGETS "")

IF ( BUILD_SHARED_LIBS )
  LIST ( APPEND ILMBASE_LIB_TARGETS IexMath )

  ADD_LIBRARY ( IexMath SHARED
    IexMathFloatExc.cpp  
    IexMathFpu.cpp
    )

  TARGET_COMPILE_DEFINITIONS ( IexMath PRIVATE IEXMATH_EXPORTS )
  IF (WIN32)
    TARGET_COMPILE_DEFINITIONS ( IexMath PUBLIC OPENEXR_DLL )
  ENDIF ()

  TARGET_LINK_LIBRARIES(IexMath Iex)
  SET_TARGET_PROPERTIES ( IexMath
    PROPERTIES
    VERSION ${ILMBASE_VERSION_MAJOR}.${ILMBASE_VERSION_MINOR}.${ILMBASE_VERSION_PATCH}
    SOVERSION ${ILMBASE_VERSION_MAJOR}
    OUTPUT_NAME "IexMath${ILMBASE_LIBSUFFIX}"
    )
ENDIF ()

IF (BUILD_STATIC_LIBS)
  LIST ( APPEND ILMBASE_LIB_TARGETS IexMath_static )

  ADD_LIBRARY ( IexMath_static STATIC
    IexMathFloatExc.cpp  
    IexMathFpu.cpp
    )

  SET_TARGET_PROPERTIES ( IexMath_static
    PROPERTIES
    VERSION ${ILMBASE_VERSION_MAJOR}.${ILMBASE_VERSION_MINOR}.${ILMBASE_VERSION_PATCH}
    OUTPUT_NAME "IexMath${ILMBASE_LIBSUFFIX}_s"
    )
ENDIF( )

IF (BUILD_SHARED_LIBS OR BUILD_STATIC_LIBS)
  INSTALL ( TARGETS ${ILMBASE_LIB_TARGETS}
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION ${RUNTIME_DIR}
  )
ENDIF ()

INSTALL ( 
  FILES 
    IexMathFloatExc.h  
    IexMathFpu.h  
    IexMathIeeeExc.h

  DESTINATION
    include/OpenEXR
)
